--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<a href="#" class="info">Ad Choices</a>
 			<a href="#" class="info">Terms</a>
 			<a href="#" class="info">Help</a>
-            <p class="end">Facebook @ 2018</p>
+            <p class="end">Facebook © 2018</p>
 		</div>
         </footer>
             
