--- a/index.html
+++ b/index.html
@@ -1,95 +1,100 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Facebook</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="main_bar">
-                <a href="#" class="logo_facebook"><p>facebook</p></a>
-                <form class="login_form">
-                    <div class="login block">
-                        <label class="email_input"  for="email_input">Email or Phone</label>
-                        <input class="email_input"type="text" id="email_input">
-                    </div>
-                    <div class="password block">
-                        <label class="password_input" for="password_input">Password</label>
-                        <input class="password_input" type="password" id="password_input">
-                        <a href="#" class="forgot_account">Forgot account?</a>
-                    </div>
-                    <button class="log_in">Log in</button>  
+
+<head>
+    <meta charset="utf-8">
+    <title>Facebook</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="main_bar">
+            <a href="#" class="logo_facebook">
+                <p>facebook</p>
+            </a>
+            <form class="login_form">
+                <div class="login block">
+                    <label class="email_input" for="email_input">Email or Phone</label>
+                    <input class="email_input" type="text" id="email_input">
+                </div>
+                <div class="password block">
+                    <label class="password_input" for="password_input">Password</label>
+                    <input class="password_input" type="password" id="password_input">
+                    <a href="#" class="forgot_account">Forgot account?</a>
+                </div>
+                <button class="log_in">Log in</button>
+            </form>
+        </div>
+    </header>
+    <main class="main_content">
+        <div class="center">
+            <div class="find">
+                <p class="text">Find Your Account</p>
+                <hr class="line_in_first_block">
+                <form class="Email_ent">
+                    <label for="enter_email">Please enter your email or phone number to search for your account.</label>
+                    <input type="text" id="enter_email" class="enter_email" placeholder="Email or Phone">
                 </form>
             </div>
-             </header>
-            <main class="main_content">
-                <div class="center">
-                    <div class="find">
-                    <h2>Find Your Account</h2>
-                    <hr class="line_in_first_block">
-                        <form class="Email_ent">
-                            <label for="enter_email">Please enter your email or phone number to search for your account.</label>
-                            <input type="text" id="enter_email" class="enter_email" placeholder="Email or Phone">   
-                        </form>
-                    </div>
-                    <div class="button_block">
-                        <button class="search">Search</button>
-                        <button class="cancel">Cancel</button>
-                    </div>   
-                </div>
-            </main>
-        <footer>
-            <div class="languages_selection">
-			<a href="#" class="language">English (US)</a>
-			<a href="#" class="language">Українська</a>
-			<a href="#" class="language">Русский</a>
-			<a href="#" class="language">Magyar</a>
-			<a href="#" class="language">العربية</a>
-			<a href="#" class="language">Français (France)</a>
-			<a href="#" class="language">TürkçeTiếng</a>
-			<a href="#" class="language">Việt</a>
-			<a href="#" class="language">Polski</a>
-			<a href="#" class="language">Español</a>
-			<a href="#" class="language">Português (Brasil)</a>
-			<button class="show_more_language">+</button>
-		</div>
-            <hr class="line_in_second_block">
-            <div class="footer_info">
-			<a href="#" class="info">Sign Up</a>
-			<a href="#" class="info">Log In</a>
-			<a href="#" class="info">Messenger</a>
-			<a href="#" class="info">Facebook Lite</a>
-			<a href="#" class="info">Mobile</a>
-			<a href="#" class="info">Find Friends</a>
-			<a href="#" class="info">People</a>
-			<a href="#" class="info">Pages</a>
-			<a href="#" class="info">Places</a>
-			<a href="#" class="info">Games</a>
-			<a href="#" class="info">Locations</a>
-			<a href="#" class="info">Celebrities</a>
-			<a href="#" class="info">Marketplace</a>
-			<a href="#" class="info">Groups</a>
-			<a href="#" class="info">Recipes</a>
-			<a href="#" class="info">Sports</a>
-			<a href="#" class="info">Look</a>
-			<a href="#" class="info">Moments</a>
-			<a href="#" class="info">Instagram</a>
-			<a href="#" class="info">Local</a>
-			<a href="#" class="info">About</a>
-			<a href="#" class="info">Create Ad</a>
-			<a href="#" class="info">Create Page</a>
-			<a href="#" class="info">Developers</a>
-			<a href="#" class="info">Careers</a>
-			<a href="#" class="info">Privacy</a>
-			<a href="#" class="info">Cookies</a>
-			<a href="#" class="info">Ad Choices</a>
-			<a href="#" class="info">Terms</a>
-			<a href="#" class="info">Help</a>
+            <div class="button_block">
+                <button class="search">Search</button>
+                <button class="cancel">Cancel</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="languages_selection">
+            <a href="#" class="language">English (US)</a>
+            <a href="#" class="language">Українська</a>
+            <a href="#" class="language">Русский</a>
+            <a href="#" class="language">Magyar</a>
+            <a href="#" class="language">العربية</a>
+            <a href="#" class="language">Français (France)</a>
+            <a href="#" class="language">TürkçeTiếng</a>
+            <a href="#" class="language">Việt</a>
+            <a href="#" class="language">Polski</a>
+            <a href="#" class="language">Español</a>
+            <a href="#" class="language">Português (Brasil)</a>
+            <button class="show_more_language">+</button>
+        </div>
+        <hr class="line_in_second_block">
+        <div class="footer_info">
+            <a href="#" class="info">Sign Up</a>
+            <a href="#" class="info">Log In</a>
+            <a href="#" class="info">Messenger</a>
+            <a href="#" class="info">Facebook Lite</a>
+            <a href="#" class="info">Mobile</a>
+            <a href="#" class="info">Find Friends</a>
+            <a href="#" class="info">People</a>
+            <a href="#" class="info">Pages</a>
+            <a href="#" class="info">Places</a>
+            <a href="#" class="info">Games</a>
+            <a href="#" class="info">Locations</a>
+            <a href="#" class="info">Celebrities</a>
+            <a href="#" class="info">Marketplace</a>
+            <a href="#" class="info">Groups</a>
+            <a href="#" class="info">Recipes</a>
+            <a href="#" class="info">Sports</a>
+            <a href="#" class="info">Look</a>
+            <a href="#" class="info">Moments</a>
+            <a href="#" class="info">Instagram</a>
+            <a href="#" class="info">Local</a>
+            <a href="#" class="info">About</a>
+            <a href="#" class="info">Create Ad</a>
+            <a href="#" class="info">Create Page</a>
+            <a href="#" class="info">Developers</a>
+            <a href="#" class="info">Careers</a>
+            <a href="#" class="info">Privacy</a>
+            <a href="#" class="info">Cookies</a>
+            <a href="#" class="info">Ad Choices</a>
+            <a href="#" class="info">Terms</a>
+            <a href="#" class="info">Help</a>
             <p class="end">Facebook © 2018</p>
-		</div>
-        </footer>
-            
-       
-    </body>
+        </div>
+    </footer>
+
+
+</body>
+
 </html>
